--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -1,40 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="index.js"></script>
 </head>
-<body>
-    <script>
-        while(true){
 
-            var num1=prompt("ingrese el primer número: ");
-            var num2=prompt("ingrese el segundo número: ");
-            num1=parseInt(num1,10);
-            num2=parseInt(num2,10);
-            var opcion;
-            if(num1==NaN||num2==NaN){
-                alert("solo puede ingresar números");
-            }else{
-                opcion=prompt("ingrese la operación:\n1. Suma\n2. Resta\n3. Multiplicación\n4. División");
-                break;
-            }
-            
-        }
-        if(opcion=="1"){
-            alert(num1+num2);
-        }else if(opcion=="2"){
-            alert(num1-num2);
-        }else if(opcion=="3"){
-            alert(num1*num2);
-        }else if(opcion=="4"){
-            alert(num1/num2)
-        }else{
-            alert("opción inválida.")
-        }
-        
-    </script>
+<body>
+    <center>
+        <h1>Calculadora</h1>
+        <div class="form-group col-md-4">
+            <div class="form-group">
+                <input type="number" placeholder="Número 1" id="Num1" class="form-control">
+            </div>
+
+            <div class="form-group">
+                <input type="number" placeholder="Número 2" id="Num2" class="form-control">
+            </div>
+
+            <div class="form-group">
+                <select id="operadores" class="form-select form-select-lg mb-3">
+                    <option value="">operador</option>
+                    <option value="1">Suma</option>
+                    <option value="2">Resta</option>
+                    <option value="3">Multiplicación</option>
+                    <option value="4">División</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <button onclick="operar()" class="btn btn-success">Operar</button>
+            </div>
+            <div id="Resultado">
+
+            </div>
+        </div>
+    </center>
 </body>
+
 </html>
